--- a/_pages/kits/sumohardware/v03X.md
+++ b/_pages/kits/sumohardware/v03X.md
@@ -103,7 +103,7 @@ The two wheels should be attached to the servomotors, so the robot can execute t
 
 ### 12. Place the servo motors
 
-Place the servomotors on the SumoBoard, on top of the labels LEFT_SERVO and RIGHT_SERVO. The positioning is important - the gear that sticks out from the motor should face towards the back of the robot. The servomotors cables should go towards the back of the robot, where the open source hardware logo is. Afterwards, secure them with the two black breakaway tabs from the first step. Insert the screws from up, the bolts from down and then screw them together. When this is done, you can put the cables under the microcontroller, as shown in the pictures below.
+Place the servomotors on the SumoBoard, on top of the labels LEFT_SERVO and RIGHT_SERVO. The positioning is important - the servomotors cables should go towards the back of the robot, where the power switch is. Afterwards, secure them with the two black breakaway tabs (the narrow stick with two screw holes) from the first step. Insert the screws from up, the bolts from below and then screw them together. When this is done, you can put the cables under the microcontroller, as shown in the pictures below.
 
 ![sumoboard](/assets/img/v031/step12.jpg){:width="49%"}
 ![sumoboard](/assets/img/v031/step12_1.jpg){:width="49%"}
