update v0.3.X assembly guide

--- a/_pages/kits/sumohardware/v03X.md
+++ b/_pages/kits/sumohardware/v03X.md
@@ -97,13 +97,14 @@ IMPORTANT! Do this only when you have the SumoBoard v0.3 not v0.3.1 or any later
 
 ### 11.Prepare the wheels
 
-The two wheels should be attached to the servomotors, so the robot can execute the movement commands. Find the two black screws from the bag and screw them to the wheels.
+The two wheels should be attached to the servomotors, so the robot can execute the movement commands. Find the two black screws from the bag and screw them to the wheels. Then place the zip ties around the servomotors.
 
 ![sumoboard](/assets/img/v031/step11.jpg){:width="49%"}
+![sumoboard](/assets/img/v031/step11_1.jpg){:width="49%"}
 
 ### 12. Place the servo motors
 
-Place the servomotors on the SumoBoard, on top of the labels LEFT_SERVO and RIGHT_SERVO. The positioning is important - the servomotors cables should go towards the back of the robot, where the power switch is. Afterwards, secure them with the two black breakaway tabs (the narrow stick with two screw holes) from the first step. Insert the screws from up, the bolts from below and then screw them together. When this is done, you can put the cables under the microcontroller, as shown in the pictures below.
+Place the servomotors on the SumoBoard with the zip ties around them, on top of the labels LEFT_SERVO and RIGHT_SERVO. The positioning is important - the servomotors cables should go towards the back of the robot, where the power switch is. Afterwards, secure them with the two black breakaway tabs (the narrow stick with two screw holes) from the first step. Insert the screws from up, the bolts from below and then screw them together. When this is done, you can put the cables under the microcontroller, as shown in the pictures below.
 
 ![sumoboard](/assets/img/v031/step12.jpg){:width="49%"}
 ![sumoboard](/assets/img/v031/step12_1.jpg){:width="49%"}
