update v0.3.X assembly guide

--- a/_pages/kits/sumohardware/v03X.md
+++ b/_pages/kits/sumohardware/v03X.md
@@ -8,7 +8,7 @@ permalink: "/kits/sumorobot/sumohardware/v03X"
 
 ### 1. Break the PCB apart
 
-Start by taking the black board that has RoboKoding's logo on it. That is the PCB (meaning "printed circuit board") of the SumoRobot, where you will solder all the different components. If you look closer, you will notice tiny holes around the board. Those are the breakaway tabs that you need to separate into individual parts. Using pliers, carefully break off each part. After you separate all the parts, use a tool to smoothen the rough edges. You can use a wire cutter, scissors, a hand file or sand paper. 
+Start by taking the black board that has RoboKoding's logo on it. That is the PCB (meaning "printed circuit board") of the SumoRobot, where you will solder all the different components. If you look closer, you will notice tiny holes around the board. Those are the breakaway tabs that you need to separate into individual parts. Using pliers, carefully break off each part. After you separate all the parts, use a tool to smoothen the rough edges. You can use a wire cutter, scissors, a hand file or sand paper.
 
 ![sumoboard](/assets/img/v031/step_1.jpg){:width="49%"}
 ![sumoboard](/assets/img/v031/step_1_1.jpg){:width="49%"}
@@ -21,7 +21,7 @@ Big blue resistors > R1, R2 = 0.1 ohm
 Small beige resistors > R3, R4, R5, R6, R7 = 100 ohm  
 Small blue resistors > R8, R9, R10, R11 = 100K ohm
 
-Bend the resistor legs 90 degrees and place them on the SumoBoard. You can place and solder them one by one, or all together.  They don't have polarity, which means that you can place them in any of orientation on the board. 
+Bend the resistor legs 90 degrees and place them on the SumoBoard. You can place and solder them one by one, or all together.  They don't have polarity, which means that you can place them in any of orientation on the board.
 
 ![sumoboard](/assets/img/v031/step_2.jpg){:width="49%"}
 ![sumoboard](/assets/img/v031/step_2_1.jpg){:width="49%"}
@@ -77,7 +77,7 @@ Find the three LEDs - one blue and two yellow. Place the yellow ones in the hole
 
 ### 9. Solder the ultrasonic sensor
 
-Find the ultrasonic sensor. This one helps the robot to detect objects, i.e. "to see" the opponent on the SumoRing. Push it in the holes labeles as J1 on the board and solder it into place. 
+Find the ultrasonic sensor. This one helps the robot to detect objects, i.e. "to see" the opponent on the SumoRing. Push it in the holes labeles as J1 on the board and solder it into place.
 
 ![sumoboard](/assets/img/v031/step9.jpg){:width="49%"}
 
@@ -102,15 +102,7 @@ The two wheels should be attached to the servomotors, so the robot can execute t
 ![sumoboard](/assets/img/v031/step11.jpg){:width="49%"}
 ![sumoboard](/assets/img/v031/step11_1.jpg){:width="49%"}
 
-### 12. Place the servo motors
-
-Place the servomotors on the SumoBoard with the zip ties around them, on top of the labels LEFT_SERVO and RIGHT_SERVO. The positioning is important - the servomotors cables should go towards the back of the robot, where the power switch is. Afterwards, secure them with the two black breakaway tabs (the narrow stick with two screw holes) from the first step. Insert the screws from up, the bolts from below and then screw them together. When this is done, you can put the cables under the microcontroller, as shown in the pictures below.
-
-![sumoboard](/assets/img/v031/step12.jpg){:width="49%"}
-![sumoboard](/assets/img/v031/step12_1.jpg){:width="49%"}
-![sumoboard](/assets/img/v031/step12_2.jpg){:width="49%"}
-
-### 13. Connect the battery
+### 12. Connect the battery
 
 First, pull apart the black and red power cable. Then peal off some isolation from the cable ends with the pliers or edge cutters. Then Apply solder to the ends of the cables.
 
@@ -126,12 +118,28 @@ After that, solder the cables to the positive and nagative side of the battery.
 
 ![sumoboard](/assets/img/v031/step13_4.jpg){:width="49%"}
 
-Fasten the battery on top of the servomotors with zip ties or rubber bands, either which was supplied with the kit. Finally place the red and black wire from the battery from top trough the SumoBoard holes to connect them to J6 and J7. Bend the cables into the holes and solder them. J7 can be in a different location, depending on the exact version of SumoBoard you have.
+Finally solder the battery to the SumoBoard, red cable to BAT+ (J6) and black cable to BAT- (J7). You can either solder them directly to or connect them trough the assistive holes by making a small loop, like shown on the images below.
 
-![sumoboard](/assets/img/v031/step13_5.jpg){:width="49%"}
-![sumoboard](/assets/img/v031/step13_6.jpg){:width="49%"}
+![sumoboard](/assets/img/v031/step13_7.jpg){:width="49%"}
+![sumoboard](/assets/img/v031/step13_8.jpg){:width="49%"}
 
 TIP: Be careful that the power button SW1, which was soldered earlier, is turned OFF. The slide switch should be on the left, OFF position.
+
+### 13. Fasten the servomotors and the battery
+
+Place the servomotors on the SumoBoard with the zip ties around them, on top of the labels LEFT_SERVO and RIGHT_SERVO. The positioning is important - the servomotors cables should go towards the back of the robot, where the power switch is. Afterwards, place the black breakaway tabs on top of the servos (the narrow stick with two screw holes) from the first step. Then place the battery trough the zip ties, on top of the servomotors. Pull tight the zip ties and cut the remainders.
+
+![sumoboard](/assets/img/v031/step12_3.jpg){:width="49%"}
+
+Insert the screws from up, the bolts from below and then screw them together. When this is done, you can put the cables under the microcontroller, as shown in the pictures below.
+
+![sumoboard](/assets/img/v031/step12_4.jpg){:width="49%"}
+![sumoboard](/assets/img/v031/step12_1.jpg){:width="49%"}
+![sumoboard](/assets/img/v031/step12_5.jpg){:width="49%"}
+
+TIP: You can add some hot glue or other means to make the wheel have more friction.
+
+Finally add a name on your SumoRobot and your done with assembling it!
 
 ![sumoboard](/assets/img/v031/final.jpg){:width="49%"}
 
