--- a/_pages/kits/sumohardware/v04X.md
+++ b/_pages/kits/sumohardware/v04X.md
@@ -56,7 +56,7 @@ The two green cylinders are the capacitors and they should be placed on the C1 a
 
 ### 6. Solder the plow
 
-Find the plow and the two silver breakaway tabs from the first step. We will use those to connect the plow to the main board. After you attach everything together, apply solder on both sides of the board.
+Break apart the plow and the two silver breakaway tabs. We will use those 2 tabs to connect the plow to the main board. After you attach everything together, apply solder on both sides of the board to the 2 tabs.
 
 ![sumoboard](/assets/img/v04X/step6_1.jpg){:width="49%"}
 ![sumoboard](/assets/img/v04X/step6_2.jpg){:width="49%"}
@@ -84,22 +84,22 @@ Find the ultrasonic sensor. This one helps the robot to detect objects, i.e. "to
 
 ### 9. Solder the power button
 
-Put the power button in the SW1 labeled holes. Once again the polarity is important again - check the sides of the button, they should match with the drawing on the SumoBoard.
+Put the power button in the SW1 labeled holes and solder it into place.
 
 ![sumoboard](/assets/img/v04X/step10_1.jpg){:width="49%"}
 
 ### 10. Assemble the servomotors
 
-The two wheels should be attached to the servomotors, so the robot can execute the movement commands. Find the two black screws from the bag and screw them to the wheels. Then place the zip ties around the servomotors.
+The two wheels should be attached to the servomotors, so the robot can execute the movement commands. Find the two black screws from the bag and screw them to the wheels.
 
 ![sumoboard](/assets/img/v04X/step11_1.jpg){:width="49%"}
 ![sumoboard](/assets/img/v04X/step11_2.jpg){:width="49%"}
 
-Place the servomotors on the SumoBoard with the zip ties around them, on top of the labels LEFT_SERVO and RIGHT_SERVO. The positioning is important - the servomotors cables should go towards the back of the robot, where the power switch is. Afterwards, place the black breakaway tabs on top of the servos (the narrow stick with two screw holes) from the first step. Then place the battery trough the zip ties, on top of the servomotors. Pull tight the zip ties and cut the remainders.
+Break away the 2 remaining tabs on each side of the SumoBoard.
 
 ![sumoboard](/assets/img/v04X/step11_3.jpg){:width="49%"}
 
-Insert the screws from up, the bolts from below and then screw them together.
+Place the servomotors on the SumoBoard with the zip ties underneath them, on top of the labels LEFT_SERVO and RIGHT_SERVO. The positioning is important - the servomotors cables should go towards the back of the robot, where the power switch is. Afterwards, place the black breakaway tabs on top of the servos. Insert the screws from up, the nuts from below and then screw them together.
 
 ![sumoboard](/assets/img/v04X/step11_4.jpg){:width="49%"}
 ![sumoboard](/assets/img/v04X/step11_5.jpg){:width="49%"}
