--- a/_pages/kits/sumohardware/v03X.md
+++ b/_pages/kits/sumohardware/v03X.md
@@ -87,7 +87,7 @@ IMPORTANT! Do this only if you have the SumoBoard v0.3 not v0.3.1 or any later v
 
 ### 10. Solder the power button
 
-Put the power button in the SW1 labeled holes. Once again the polarity is important again - check the sides of the button, they should match with the drawing on the SumoBoard.
+Put the power button in the SW1 labeled holes and solder it into place.
 
 ![sumoboard](/assets/img/v031/step10.jpg){:width="49%"}
 
@@ -131,7 +131,7 @@ Place the servomotors on the SumoBoard with the zip ties around them, on top of 
 
 ![sumoboard](/assets/img/v031/step12_3.jpg){:width="49%"}
 
-Insert the screws from up, the bolts from below and then screw them together. When this is done, you can put the cables under the microcontroller, as shown in the pictures below.
+Insert the screws from up, the nuts from below and then screw them together. When this is done, you can put the cables under the microcontroller, as shown in the pictures below.
 
 ![sumoboard](/assets/img/v031/step12_4.jpg){:width="49%"}
 ![sumoboard](/assets/img/v031/step12_1.jpg){:width="49%"}
