--- a/_pages/kits/sumohardware/v02X.md
+++ b/_pages/kits/sumohardware/v02X.md
@@ -138,5 +138,5 @@ For charging the SumoRobot it has to be turned ON. Once you plug the micro USB i
 
 ## Debugging problems
 
-In case you are facing some problems with the SumoRobot you can contact [support@robokoding.com](#)
+In case you are facing some problems with the SumoRobot you can contact [letstalk@robokoding.com](#)
 In case you are interested to debug problems yourself you can head over to [GitHub](https://github.com/robokoding) to find all the design files and software.
