--- a/_pages/kits/sumohardware/v03X.md
+++ b/_pages/kits/sumohardware/v03X.md
@@ -157,5 +157,5 @@ The blue LED light indicates if the SumoRobot sees something in front of it. It 
 
 ## Debugging problems
 
-In case you are facing some problems with the SumoRobot you can contact [support@robokoding.com](#)
+In case you are facing some problems with the SumoRobot you can contact [letstalk@robokoding.com](#)
 In case you are interested to debug problems yourself you can head over to [GitHub](https://github.com/robokoding) to find all the design files and software.
