--- a/_pages/kits/sumohardware/v04X.md
+++ b/_pages/kits/sumohardware/v04X.md
@@ -44,7 +44,7 @@ For this step you need the microcontroller, the pair of male pin headers and the
 
 ### 4. Solder the servomotor pin headers
 
-The 2 pin headers for the servomotors go to the holes with the labels LEFT_SERVO (J2) and RIGHT_SERVO (J3). Place the pin header and solder one of its pins first. Then try to align the pin header 90 degrees with the SumoBoard while reheating the previously made solder connection and pressing it from the other side.
+The 2 pin headers (each one has 3 pins) for the servomotors go to the holes with the labels LEFT_SERVO (J2) and RIGHT_SERVO (J3). Place the pin header and solder one of its pins first. Then try to align the pin header 90 degrees with the SumoBoard while reheating the previously made solder connection and pressing it from the other side.
 
 ![sumoboard](/assets/img/v04X/step4_1.jpg){:width="49%"}
 
@@ -65,7 +65,7 @@ Break apart the plow and the two silver breakaway tabs. We will use those 2 tabs
 
 ### 7. Solder the LEDs
 
-Find the three LEDs - one blue and two yellow. Place the yellow ones in the holes with labels D6 and D7, while the blue one in the hole marked as D5. Be aware of the polarity again. Take a closer look and notice how the specific shape of the LED corresponds to the drawing on the board. You should place the shorter leg of the LED into the hole with a rectangular pad of the SumoBoard. After you make sure the polarity has the right orientation on the board, solder the yellow LEDs. The blue LED is placed in a more specific way. After you place the shorter leg in the hole marked with a rectangular shape, push the longer trough the J12 hole on the mainboard.
+Find the three LEDs - one blue and two yellow. Place the yellow ones in the holes with labels D6 and D7, while the blue one in the hole marked as D5. Be aware of the polarity again. Take a closer look and notice how the specific shape of the LED corresponds to the drawing on the board. You should place the shorter leg of the LED into the hole with a rectangular pad of the SumoBoard. After you make sure the polarity has the right orientation on the board, solder the yellow LEDs. The blue LED is placed in a more specific way. After you place the shorter leg in the hole marked with a rectangular shape, push the longer trough the J11 hole on the mainboard.
 
 ![sumoboard](/assets/img/v04X/step7_1.jpg){:width="49%"}
 ![sumoboard](/assets/img/v04X/step7_2.jpg){:width="49%"}
