--- a/_pages/kits/sumohardware/v04X.md
+++ b/_pages/kits/sumohardware/v04X.md
@@ -16,122 +16,122 @@ Small green resistors > R8, R9, R10, R11 = 100K ohm
 
 Bend the resistor legs 90 degrees and place them on the SumoBoard. You can place and solder them one by one, or all together.  They don't have polarity, which means that you can place them in any of orientation on the board.
 
-![sumoboard](/assets/img/v04X/step1_1.jpg){:width="49%"}
-![sumoboard](/assets/img/v04X/step1_2.jpg){:width="49%"}
-![sumoboard](/assets/img/v04X/step1_3.jpg){:width="49%"}
+![sumoboard](/assets/img/v04X/step1_1.jpg){: .instructions}
+![sumoboard](/assets/img/v04X/step1_2.jpg){: .instructions}
+![sumoboard](/assets/img/v04X/step1_3.jpg){: .instructions}
 
 Cut the remainder of the resistor's legs and keep the remainders on the side, for a later step.
 
-![sumoboard](/assets/img/v04X/step1_4.jpg){:width="49%"}
+![sumoboard](/assets/img/v04X/step1_4.jpg){: .instructions}
 
 ### 2. Solder the phototransistors
 
 Find the two phototransistors - these are the light sensors that help the SumoRobot detect the line on the SumoRing. They are polarized, therefore pay close attention to the white drawing on the SumoBoard. The drawing corresponds to the shape of the phototransistor, therefore showing you the right way to place it on the board.  Bend the legs 90 degrees, place them on the board (labels: D1, D2 and D3, D4) and then solder them.
 
-![sumoboard](/assets/img/v04X/step2_1.jpg){:width="49%"}
-![sumoboard](/assets/img/v04X/step2_2.jpg){:width="49%"}
+![sumoboard](/assets/img/v04X/step2_1.jpg){: .instructions}
+![sumoboard](/assets/img/v04X/step2_2.jpg){: .instructions}
 
 ### 3. Solder the microcontroller
 
 For this step you need the microcontroller, the pair of male pin headers and the pair of female pin headers. Place the female pin headers on the markings J4 and J5 on the board. Afterwards put the male pin headers into the microcontroller and place them on the board, into the female pin headers. Then solder the male pin headers to the microcontroller and the female pin headers to the SumoBoard.
 
-![sumoboard](/assets/img/v04X/step_3_1.jpg){:width="49%"}
-![sumoboard](/assets/img/v04X/step3_2.jpg){:width="49%"}
-![sumoboard](/assets/img/v04X/step3_3.jpg){:width="49%"}
-![sumoboard](/assets/img/v04X/step3_4.jpg){:width="49%"}
-![sumoboard](/assets/img/v04X/step3_5.jpg){:width="49%"}
-![sumoboard](/assets/img/v04X/step_3_6.jpg){:width="49%"}
+![sumoboard](/assets/img/v04X/step_3_1.jpg){: .instructions}
+![sumoboard](/assets/img/v04X/step3_2.jpg){: .instructions}
+![sumoboard](/assets/img/v04X/step3_3.jpg){: .instructions}
+![sumoboard](/assets/img/v04X/step3_4.jpg){: .instructions}
+![sumoboard](/assets/img/v04X/step3_5.jpg){: .instructions}
+![sumoboard](/assets/img/v04X/step_3_6.jpg){: .instructions}
 
 ### 4. Solder the servomotor pin headers
 
 The 2 pin headers (each one has 3 pins) for the servomotors go to the holes with the labels LEFT_SERVO (J2) and RIGHT_SERVO (J3). Place the pin header and solder one of its pins first. Then try to align the pin header 90 degrees with the SumoBoard while reheating the previously made solder connection and pressing it from the other side.
 
-![sumoboard](/assets/img/v04X/step4_1.jpg){:width="49%"}
+![sumoboard](/assets/img/v04X/step4_1.jpg){: .instructions}
 
 ### 5. Solder the capacitors
 
 The two green cylinders are the capacitors and they should be placed on the C1 and C2 markings. They have polarity, which means that you have to be careful how you place them on the board. On one side of the capacitor's body there is a grey stripe. The capacitor's leg from the striped side goes into the SumoBoard hole which is marked as a half circle filled with white colour. After you make sure you got the polarity right, solder the capacitors on the SumoBoard.
 
-![sumoboard](/assets/img/v04X/step5_1.jpg){:width="49%"}
+![sumoboard](/assets/img/v04X/step5_1.jpg){: .instructions}
 
 ### 6. Solder the plow
 
 Break apart the plow and the two silver breakaway tabs. We will use those 2 tabs to connect the plow to the main board. After you attach everything together, apply solder on both sides of the board to the 2 tabs.
 
-![sumoboard](/assets/img/v04X/step6_1.jpg){:width="49%"}
-![sumoboard](/assets/img/v04X/step6_2.jpg){:width="49%"}
-![sumoboard](/assets/img/v04X/step6_3.jpg){:width="49%"}
-![sumoboard](/assets/img/v04X/step6_4.jpg){:width="49%"}
+![sumoboard](/assets/img/v04X/step6_1.jpg){: .instructions}
+![sumoboard](/assets/img/v04X/step6_2.jpg){: .instructions}
+![sumoboard](/assets/img/v04X/step6_3.jpg){: .instructions}
+![sumoboard](/assets/img/v04X/step6_4.jpg){: .instructions}
 
 ### 7. Solder the LEDs
 
 Find the three LEDs - one blue and two yellow. Place the yellow ones in the holes with labels D6 and D7, while the blue one in the hole marked as D5. Be aware of the polarity again. Take a closer look and notice how the specific shape of the LED corresponds to the drawing on the board. You should place the shorter leg of the LED into the hole with a rectangular pad of the SumoBoard. After you make sure the polarity has the right orientation on the board, solder the yellow LEDs. The blue LED is placed in a more specific way. After you place the shorter leg in the hole marked with a rectangular shape, push the longer trough the J11 hole on the mainboard.
 
-![sumoboard](/assets/img/v04X/step7_1.jpg){:width="49%"}
-![sumoboard](/assets/img/v04X/step7_2.jpg){:width="49%"}
+![sumoboard](/assets/img/v04X/step7_1.jpg){: .instructions}
+![sumoboard](/assets/img/v04X/step7_2.jpg){: .instructions}
 
 Take the remainders of the resistors' legs from step 2. Place them in the holes on the board as shown on the image below. Solder them on both sides of the board, as well.
 
-![sumoboard](/assets/img/v04X/step8_1.jpg){:width="49%"}
-![sumoboard](/assets/img/v04X/step8_2.jpg){:width="49%"}
+![sumoboard](/assets/img/v04X/step8_1.jpg){: .instructions}
+![sumoboard](/assets/img/v04X/step8_2.jpg){: .instructions}
 
 ### 8. Solder the ultrasonic sensor
 
 Find the ultrasonic sensor. This one helps the robot to detect objects, i.e. "to see" the opponent on the SumoRing. Push it in the holes labeles as J1 on the board and solder it into place.
 
-![sumoboard](/assets/img/v04X/step9_1.jpg){:width="49%"}
-![sumoboard](/assets/img/v04X/step9_2.jpg){:width="49%"}
+![sumoboard](/assets/img/v04X/step9_1.jpg){: .instructions}
+![sumoboard](/assets/img/v04X/step9_2.jpg){: .instructions}
 
 ### 9. Solder the power button
 
 Put the power button in the SW1 labeled holes and solder it into place.
 
-![sumoboard](/assets/img/v04X/step10_1.jpg){:width="49%"}
+![sumoboard](/assets/img/v04X/step10_1.jpg){: .instructions}
 
 ### 10. Assemble the servomotors
 
 The two wheels should be attached to the servomotors, so the robot can execute the movement commands. Find the two black screws from the bag and screw them to the wheels.
 
-![sumoboard](/assets/img/v04X/step11_1.jpg){:width="49%"}
-![sumoboard](/assets/img/v04X/step11_2.jpg){:width="49%"}
+![sumoboard](/assets/img/v04X/step11_1.jpg){: .instructions}
+![sumoboard](/assets/img/v04X/step11_2.jpg){: .instructions}
 
 Break away the 2 remaining tabs on each side of the SumoBoard.
 
-![sumoboard](/assets/img/v04X/step11_3.jpg){:width="49%"}
+![sumoboard](/assets/img/v04X/step11_3.jpg){: .instructions}
 
 Place the servomotors on the SumoBoard with the zip ties underneath them, on top of the labels LEFT_SERVO and RIGHT_SERVO. The positioning is important - the servomotors cables should go towards the back of the robot, where the power switch is. Afterwards, place the black breakaway tabs on top of the servos. Insert the screws from up, the nuts from below and then screw them together.
 
-![sumoboard](/assets/img/v04X/step11_4.jpg){:width="49%"}
-![sumoboard](/assets/img/v04X/step11_5.jpg){:width="49%"}
+![sumoboard](/assets/img/v04X/step11_4.jpg){: .instructions}
+![sumoboard](/assets/img/v04X/step11_5.jpg){: .instructions}
 
 ### 11. Connect the battery
 
 Press the contacts of the battery connector a bit back with the pliers and cut the ends of the black and red cables a bit.
 
-![sumoboard](/assets/img/v04X/step12_1.jpg){:width="49%"}
-![sumoboard](/assets/img/v04X/step13_2.jpg){:width="49%"}
+![sumoboard](/assets/img/v04X/step12_1.jpg){: .instructions}
+![sumoboard](/assets/img/v04X/step13_2.jpg){: .instructions}
 
 Solder the red and black cable to the SumoBoard, the holes labeled BAT+ and BAT- (J6, J7). When this is done, you can put the cables under the microcontroller, as shown in the pictures below.
 
-![sumoboard](/assets/img/v04X/step13_3.jpg){:width="49%"}
-![sumoboard](/assets/img/v04X/step13_4.jpg){:width="49%"}
-![sumoboard](/assets/img/v04X/step13_5.jpg){:width="49%"}
+![sumoboard](/assets/img/v04X/step13_3.jpg){: .instructions}
+![sumoboard](/assets/img/v04X/step13_4.jpg){: .instructions}
+![sumoboard](/assets/img/v04X/step13_5.jpg){: .instructions}
 
 Finally insert the battery, be careful to insert it the right way. The bigger pad on the battery is - (GND) and goes to the side with the black cable. The smaller pad is + and goes to the side of the red cable.
 
-![sumoboard](/assets/img/v04X/step_13_6.jpg){:width="49%"}
+![sumoboard](/assets/img/v04X/step_13_6.jpg){: .instructions}
 
 ### 13. Clean the PCB
 
 Use any strong alcohol to clean the PCB with a toothbrush or wipe.
 
-![sumoboard](/assets/img/v04X/step14_1.jpg){:width="49%"}
+![sumoboard](/assets/img/v04X/step14_1.jpg){: .instructions}
 
 TIP: You can add some hot glue or other means to make the wheel have more friction.
 
 Finally add a name on your SumoRobot and your done with assembling it!
 
-![sumoboard](/assets/img/v04X/final.jpg){:width="49%"}
+![sumoboard](/assets/img/v04X/final.jpg){: .instructions}
 
 ## Usage instructions
 
