--- a/_pages/kits/sumohardware/v04X.md
+++ b/_pages/kits/sumohardware/v04X.md
@@ -59,7 +59,6 @@ The two green cylinders are the capacitors and they should be placed on the C1 a
 Break apart the plow and the two silver breakaway tabs. We will use those 2 tabs to connect the plow to the main board. After you attach everything together, apply solder on both sides of the board to the 2 tabs.
 
 ![sumoboard](/assets/img/v04X/step6_1.jpg){: .image .instructions}
-![sumoboard](/assets/img/v04X/step6_2.jpg){: .image .instructions}
 ![sumoboard](/assets/img/v04X/step6_3.jpg){: .image .instructions}
 ![sumoboard](/assets/img/v04X/step6_4.jpg){: .image .instructions}
 
@@ -106,12 +105,11 @@ Place the servomotors on the SumoBoard with the zip ties underneath them, on top
 
 ### 11. Connect the battery
 
-Press the contacts of the battery connector a bit back with the pliers and cut the ends of the black and red cables a bit.
+Cut the ends of the black and red cables a bit.
 
-![sumoboard](/assets/img/v04X/step12_1.jpg){: .image .instructions}
 ![sumoboard](/assets/img/v04X/step13_2.jpg){: .image .instructions}
 
-Solder the red and black cable to the SumoBoard, the holes labeled BAT+ and BAT- (J6, J7). When this is done, you can put the cables under the microcontroller, as shown in the pictures below.
+Put the black and red battery holder wire trough the holes near the pads labeled BAT+ and BAT- (J6, J7). Then bend them to form a little U shaped loop into the pad J6, J7 holes and solder them. When this is done, you can put the servo motor cables under the microcontroller, as shown in the pictures below.
 
 ![sumoboard](/assets/img/v04X/step13_3.jpg){: .image .instructions}
 ![sumoboard](/assets/img/v04X/step13_4.jpg){: .image .instructions}
